cp project/force-app/main/default/objects/Site_Visit__c/fields/Channel_Partner__c.field-meta.xml
<CustomField><fullName>Channel_Partner__c</fullName><label>Channel Partner</label><referenceTo>Channel_Partner__c</referenceTo><relationshipLabel>Site Visits</relationshipLabel><relationshipName>Site_Visits</relationshipName><type>Lookup</type></CustomField>