cp project/force-app/main/default/objects/Site_Visit__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Customer Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>