cp project/force-app/main/default/objects/Site_Visit__c/fields/Inventory_Unit__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Interest</label>
    <referenceTo>Inventory_Unit__c</referenceTo>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>