cp project/force-app/main/default/objects/Site_Visit__c/fields/Salesforce_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Sync_Status__c</fullName>
    <label>Salesforce Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>