cp project/force-app/main/default/objects/Site_Visit__c/fields/Unit__c.field-meta.xml
<CustomField><fullName>Unit__c</fullName><label>Unit</label><referenceTo>Unit__c</referenceTo><relationshipName>Site_Visits</relationshipName><type>Lookup</type></CustomField>