cp project/force-app/main/default/objects/Site_Visit__c/fields/Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome__c</fullName>
    <label>Visit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Highly Interested</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Follow Up Needed</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Budget Mismatch</fullName>
                </value>
                <value>
                    <fullName>Location Mismatch</fullName>
                </value>
                <value>
                    <fullName>Booking Expected</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>