cp project/force-app/main/default/objects/Site_Visit__c/fields/Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Time__c</fullName>
    <label>Visit Time</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>