cp project/force-app/main/default/objects/Site_Visit__c/validationRules/Check_Out_After_Check_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Out_After_Check_In</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Check_In_Time__c)), NOT(ISBLANK(Check_Out_Time__c)), Check_Out_Time__c &lt; Check_In_Time__c)</errorConditionFormula>
    <errorMessage>Check-Out Time cannot precede Check-In Time.</errorMessage>
</ValidationRule>