cp project/force-app/main/default/objects/Site_Visit__c/validationRules/Completed_Visit_Requires_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Visit_Requires_Outcome</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Completed"), ISBLANK(TEXT(Visit_Outcome__c)))</errorConditionFormula>
    <errorMessage>Visit outcome is required when completing a site visit.</errorMessage>
</ValidationRule>