cp project/force-app/main/default/objects/Site_Visit__c/listViews/My_Site_Visits.listView-meta.xml
<ListView>
    <fullName>My_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Phone__c</columns>
    <columns>Lead__c</columns>
    <columns>Project__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Visit_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Site Visits</label>
</ListView>