cp project/force-app/main/default/objects/Site_Visit__c/listViews/Todays_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Todays_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Phone__c</columns>
    <columns>Lead__c</columns>
    <columns>Project__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Visit_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Executive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visit_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Site Visits</label>
</ListView>